MiniCompiladorWorkflow/tests/invalid/error1.wf
tarea inicio { print("Error léxico" @); }
